--- a/templates/tracking.html
+++ b/templates/tracking.html
@@ -1,5 +1,34 @@
-<form action="" method="post">
-    {% csrf_token %}
-    {{ track }}
-    <input type="submit" value="Submit">
-</form>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>Tracking</title>
+</head>
+<body>
+
+<div class="container">
+	<h2>Tracking</h2>
+
+	{% if messages %}
+	<ul class="messages">
+		{% for message in messages %}
+			<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+		{% endfor %}
+	</ul>
+	{% endif %}
+
+	{% block content %}
+    <div class="row">
+		<form action="" method="post">
+			{% csrf_token %}
+			<table>
+			{{ track }}
+			</table>
+			<button type="submit" class="btn btn-primary btn-sm" value="">Track</button>
+		</form>
+    </div>
+	{% endblock %}
+</div>
+
+</body>
+</html>
