--- a/templates/tracking.html
+++ b/templates/tracking.html
@@ -1,11 +1,12 @@
+{% extends 'Tracking/index.html' %}
 <html lang="en">
 <!doctype html>
 <html lang="en">
+{% block content %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tracking</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
 
 <body>
@@ -21,7 +22,6 @@
 	</ul>
 	{% endif %}
 
-	{% block content %}
     <div class="row">
 		<form action="" method="post">
 			{% csrf_token %}
@@ -31,8 +31,30 @@
             <h2><button type="submit" class="btn btn-primary btn-sm" value="">Track</button></h2>
 		</form>
     </div>
-	{% endblock %}
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<div class="card-body">
+    <ul id="datatablesSimple">
+        <thead>
+            <tr>
+                <th>Documento</th>
+            </tr>>
+        </thead>>
+        <tfoot>
+        <ul>
+        {% if TrackDocument %}
+        {% for obj in TrackDocument %}
+            <li>
+                <a href="{{ models.TrackDocument }}">{{ obj.document }}</a>
+            </li>
+        {% empty %}
+            <li>No existen documentos</li>
+        {% endfor %}
+        {% endif %}
+        </ul>
+        </tfoot>
+    </table>
+    </ul>>
+</div>>
 </body>
+{% endblock %}
 </html>
