--- a/templates/Tracking/index.html
+++ b/templates/Tracking/index.html
@@ -56,7 +56,7 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="tracking.html">Tracking</a>
+                                    <a class="nav-link" href="tracking_list.html">Tracking</a>
                                     <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a>
                                 </nav>
                             </div>
