--- a/templates/delete_document.html
+++ b/templates/delete_document.html
@@ -1,9 +1,9 @@
 {% extends 'Tracking/index.html' %}
 <!DOCTYPE html>
 <html lang="en">
-{% block content %}
+{% block content %} 
 <form method="post">{% csrf_token %}
-    <p>Esta seguro que desea eliminar el documento  {{ object }}"?</p>
+    <p>Esta seguro que desea eliminar el documento  "{{ object }}"?</p>
     {{ track }}
     <input class="btn btn-primary" type="submit" value="Confirmar">
 </form>
