--- a/templates/tracking.html
+++ b/templates/tracking.html
@@ -5,6 +5,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<div class="container">
+        <h1></h1>
+        <a class="btn btn-primary" href="/tracking_list.html" role="button">Atras</a>
+    </div>
 <title>Tracking</title>
 </head>
 <body>
