--- a/templates/tracking_list.html
+++ b/templates/tracking_list.html
@@ -35,20 +35,31 @@
                 </thead>
                 <tbody>
                     {% for obj in object_list %}
-                        <tr>
-                            <td><a href="update_documents.html/{{ obj.id }}">{{ obj.document }}</a></td>
-                            <td>{{ obj.date }}</td>
-                            <td>{{ obj.user }}</td>
-                            <td>{{ obj.site }}</td>
-                            <td>{{ obj.type }}</td>
-                            <td><a class="btn btn-danger" href="delete_document.html/{{ obj.id }}">Eliminar</a></td>
-                        </tr>
+                        <form method="POST" action="eliminate/{{obj.id}}">
+                            <tr>
+                                <td><a href="update_documents.html/{{ obj.id }}">{{ obj.document }}</a></td>
+                                <td>{{ obj.date }}</td>
+                                <td>{{ obj.user }}</td>
+                                <td>{{ obj.site }}</td>
+                                <td>{{ obj.type }}</td>
+                                <td><button class="btn btn-danger" onclick="return eliminate();" type="submit">Eliminar</button></td>
+                            </tr>
+                        </form>
                     {% endfor %}
                 </tbody>
             </table>
         </div>
     </div>
     </ul>
+    <script type="text/javascript">
+      function eliminate() {
+        var x = confirm("¿Está seguro de que desea eliminar el documento?");
+        if (x)
+          return true;
+        else
+          return false;
+      }
+    </script>
     {% endblock %}
 </body>
 </html>
