--- a/templates/tracking_list.html
+++ b/templates/tracking_list.html
@@ -3,18 +3,17 @@
 <!doctype html>
 <html lang="en">
 {% block content %}
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Documents</title>
-  </head>
+</head>
 
 <body>
     <h1></h1>
     <div class="container">
         <a class="btn btn-primary" href="tracking.html" role="button">Crear</a>
     </div>
-    <ul>
     <h1></h1>
     <div class="card mb-4">
         <div class="card-header">
@@ -42,7 +41,7 @@
                                 <td>{{ obj.user }}</td>
                                 <td>{{ obj.site }}</td>
                                 <td>{{ obj.type }}</td>
-                                <td><button class="btn btn-danger" onclick="return eliminate();" type="submit">Eliminar</button></td>
+                                <td><button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">Eliminar</button></td>
                             </tr>
                         </form>
                     {% endfor %}
@@ -50,16 +49,36 @@
             </table>
         </div>
     </div>
-    </ul>
-    <script type="text/javascript">
-      function eliminate() {
-        var x = confirm("¿Está seguro de que desea eliminar el documento?");
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+    function eliminar() {
+        var x = confirm("¿Está seguro de que desea eliminar el usuario?");
         if (x)
-          return true;
+            return true;
         else
-          return false;
-      }
-    </script>
+            return false;
+    }
+</script>
     {% endblock %}
 </body>
 </html>
