--- a/templates/Tracking/tracking_list.html
+++ b/templates/Tracking/tracking_list.html
@@ -41,7 +41,7 @@
                                 <td>{{ obj.user }}</td>
                                 <td>{{ obj.site }}</td>
                                 <td>{{ obj.type }}</td>
-                                <td><button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">Eliminar</button></td>
+                                <td><button class="btn btn-danger" onclick="eliminar()" type="submit">Eliminar</button></td>
                             </tr>
                         </form>
                     {% endfor %}
@@ -72,7 +72,7 @@
 
 <script type="text/javascript">
     function eliminar() {
-        var x = confirm("¿Está seguro de que desea eliminar el usuario?");
+        var x = confirm("Quiere eliminar el documento?");
         if (x)
             return true;
         else
