--- a/templates/Tracking/tracking_list.html
+++ b/templates/Tracking/tracking_list.html
@@ -41,7 +41,7 @@
                                 <td>{{ obj.user }}</td>
                                 <td>{{ obj.site }}</td>
                                 <td>{{ obj.type }}</td>
-                                <td><button class="btn btn-danger" onclick="eliminar()" type="submit">Eliminar</button></td>
+                                <td><a href="delete_document.html/{{ obj.id }}">Eliminar</a></td>
                             </tr>
                         </form>
                     {% endfor %}
@@ -49,36 +49,6 @@
             </table>
         </div>
     </div>
-    <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script type="text/javascript">
-    function eliminar() {
-        var x = confirm("Quiere eliminar el documento?");
-        if (x)
-            return true;
-        else
-            return false;
-    }
-</script>
     {% endblock %}
 </body>
 </html>
