--- a/templates/Tracking/tracking_list.html
+++ b/templates/Tracking/tracking_list.html
@@ -41,7 +41,7 @@
                                 <td>{{ obj.user }}</td>
                                 <td>{{ obj.site }}</td>
                                 <td>{{ obj.type }}</td>
-                                <td><a href="delete_document.html/{{ obj.id }}">Eliminar</a></td>
+                                <td><a href="delete_document.html/{{ obj.id }}" class="btn btn-danger">Eliminar</a></td>
                             </tr>
                         </form>
                     {% endfor %}
