--- a/templates/Tracking/index.html
+++ b/templates/Tracking/index.html
@@ -43,6 +43,7 @@
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
+                            <!---
                             <div class="sb-sidenav-menu-heading">Core</div>
                             <a class="nav-link" href="/">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
@@ -96,9 +97,11 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 Charts
                             </a>
+                            --->
+                            <div class="sb-sidenav-menu-heading">Seguimiento</div>
                             <a class="nav-link" href="/tracking_list.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                                Seguimiento de documentos
+                                Documentos
                             </a>
                         </div>
                     </div>
@@ -113,6 +116,7 @@
                     {% block content %}
                     <div class="container-fluid px-4">
                         <h1 class="mt-4">Inicio</h1>
+                        <!---
                         <ol class="breadcrumb mb-4">
                             <li class="breadcrumb-item active">Dashboard</li>
                         </ol>
@@ -662,6 +666,7 @@
                                 </table>
                             </div>
                         </div>
+                        --->
                     </div>
                     {% endblock %}
                 </main>
